# tstring

./: .gitignore  LICENSE.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  test_template.py
.github/workflows/: pypi.yml  pytest.yml
src/: __init__.py  template.py  template_str.py  test_template.py
src/tstring/: __init__.py  template.py
