[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tstring"
dynamic = ["version"]
authors = [
  { name="Maxwell Levin", email="24307537+maxwelllevin@users.noreply.github.com" },
]
description = "Delayed fstring-like string templates in python."
readme = "README.md"
requires-python = ">=3.7"
keywords = ["string", "template"]
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tstring = ["py.typed"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/tstring/_version.py"

[tool.setuptools.dynamic]
version = {attr = "tstring.__version__"}
